# ListasPDI

./: .clang-format  .gitignore  CMakeLists.txt  README.md
applications/: 2_2regions.cpp  2_2trocaregioes.cpp  3_floodfill.cpp  4_histogram.cpp  4_motionDetector.cpp  5_filtroEspacial.cpp  6_tilt.cpp  6_tilt_video.cpp  7_filter_frequency.cpp  8_canny.cpp  8_points.cpp  CMakeLists.txt  hello.cpp  kmeans.cpp  labeling.cpp  pixels.cpp
config/: config_file.yaml
utils/: CMakeLists.txt  config_loader.cpp  config_loader.h
